TEST_PROGRAMS/typing_benchmarks/invalid/undecl_type3.go
package main

type t struct {
	// No recursive types
	x, y t
}
